# dazl-client

./: .buildinfo  .dazl-root  .envrc  .gitattributes  .gitignore  .mypy.ini  CONTRIBUTING.md  COPYRIGHT  LICENSE  Makefile  README.md  SECURITY.md  Test file to test CLA  VERSION  basics.html  dazl.cli.html  dazl.client.html  dazl.damlast.html  dazl.damlsdk.html  dazl.html  dazl.ledger.aio.html  dazl.ledger.blocking.html  dazl.ledger.config.html  dazl.ledger.html  dazl.model.html  dazl.pretty.html  dazl.protocols.html  dazl.testing.html  dazl.util.html  genindex.html  glossary.html  go.mod  go.sum  index.html  migrating.html  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  search.html  (+7 more)
_build/: dar-mk  (+5 more)
_tools/daml-lf-decoder-gen/: Makefile  daml_lf_1.py  pyproject.toml
_tools/daml-lf-decoder-gen/daml_lf_decoder_gen/: adt.py  decode_fds.py  main.py  protoc_plugin.py  render_json.py  render_py.py
python/: .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  mypy.ini  poetry.toml  pyproject.toml  pytest.ini  setup.py
python/_dazl/: __init__.py  __main__.py  _logging.py  collections.py  generate_api.py  update.py
python/_dazl/codegen/: __init__.py  go.py  go_header.py  openapi.py  python.py  python_grpc_pyi.py  python_header.py  python_init.py  util.py
python/_dazl/download/: __init__.py
python/_dazl/openapi/: __init__.py
python/_dazl/protoc/: __init__.py
python/_dazl/protopack/: __init__.py  rename.py  rewrite.py
python/_dazl/syntax/: __init__.py
python/_dazl_pb/: __init__.py  collections.py
python/_dazl_pb/archive/: __init__.py  _conventions.py  _model.py  _parse.py
python/_dazl_pb/plugin_go/: __init__.py  _header.py  plugin.py  plugin_grpc.py  plugin_pb.py
python/_dazl_pb/plugin_go_archive/: __init__.py  plugin.py  plugin_archive.py
python/_dazl_pb/plugin_python/: __init__.py  _header.py  plugin.py  plugin_grpc.py  plugin_grpc_pyi.py  plugin_init.py  plugin_pb.py  plugin_pb_pyi.py
python/_dazl_pb/plugin_python_archive/: plugin_archive.py
python/_dazl_pb/protoc/: __init__.py  __main__.py
python/_dazl_pb/syntax/: __init__.py
python/_dazl_pb/types/: __init__.py
python/_dazl_pb/util/: __init__.py
python/_template/: Main.daml  activate  integration-test.py  test
python/dazl/: __init__.py  __main__.py  _logging.py  _version.py  py.typed
python/dazl/_gen/: __init__.py
python/dazl/_gen_api/: __init__.py
python/dazl/_repr/: __init__.py
python/dazl/api/: __init__.py
python/dazl/cli/: __init__.py  _base.py  fetch.py  ls.py  metadata.py  package.py  sandbox.py  tail.py  upload.py  version.py
python/dazl/client/: __init__.py  _base_model.py  _conn_settings.py  _events.py  _network_client_impl.py  _party_client_impl.py  _reader_match.py  _reader_sync.py  _run_level.py  _writer_verify.py  api.py  bots.py  client_participant.py  commands.py  config.py  errors.py  events.py  ledger.py  manager.py  pkg_cache.py  pkg_loader.py  runner.py  state.py
python/dazl/compat/: __init__.py  _messages.py  v8.py  v8_client_aio.py  v8_config.py  v8_events.py  v8_network.py  v8_threading.py
python/dazl/conn/: aio.py  grpc_v0.py  interfaces.py  interfaces.pyi
python/dazl/damlast/: __init__.py  _base.py  _builtins_meta.py  builtins.py  compat.py  daml_lf_1.py  daml_lf_1.pyi  daml_types.py  errors.py  eval_scope.py  evaluate.py  expand.py  ledger_api.py  ledger_api_types.py  lookup.py  parse.py  pb_parse.py  pkgfile.py  protocols.py  types.py  util.py  visitor.py
python/dazl/damleval/: __init__.py  expr_eval.py  type_eval.py
python/dazl/damlsdk/: __init__.py  _errors.py  _process.py  artifacts.py  artifacts.yaml  fetch.py  package.py  sandbox.py
python/dazl/ledger/: __init__.py  __init__.pyi  _call.py  _offsets.py  _retry.py  api_types.py  auth.py  errors.py  pkgcache.py  pkgloader_aio.py  pkgloader_aio_compat.py  stream_aio.py  stream_aio.pyi
python/dazl/ledgerutil/: __init__.py  acs.py  fetch.py
python/dazl/metrics/: __init__.py  api.py  instrumenters.py  prometheus.py
python/dazl/model/: __init__.py  core.py  definition.py  ledger.py  lookup.py  network.py  reading.py  types.py  types_dynamic.py  types_store.py  writing.py
python/dazl/plugins/: __init__.py  plugins_base.py
python/dazl/pretty/: __init__.py  _module_builder.py  _render_base.py  options.py  pygments_daml_lexer.py  render_csharp.py  render_csv.py  render_daml.py  render_json.py  render_python.py  scenario_serializer.py  util.py
python/dazl/prim/: __init__.py  basic.py  complex.py  contracts.py  datetime.py  errors.py  json.py  map.py  numbers.py  party.py
python/dazl/protocols/: __init__.py  _base.py  autodetect.py  commands.py  core.py  errors.py  events.py  oauth.py  pkgloader_aio.py  pkgloader_aio_compat.py  serializers.py
python/dazl/query/: __init__.py  query.py
python/dazl/rules/: __init__.py  _rewriter.py  api.py  appbuilder.py  appregister.py  builtins.py  expr_base.py  expr_impl.py  expr_util.py  visitor_eval.py  visitor_pretty.py
python/dazl/scheduler/: __init__.py  _base.py  _invoker.py  _invoker.pyi
python/dazl/server/: __init__.py  management.py  metrics.py  oauth_callback.py
python/dazl/testing/: __init__.py  _cert.py  _sandbox.py  auth.py  connect.py  connect.pyi
python/dazl/util/: __init__.py  asyncio_util.py  config_meta.py  dar.py  dar_repo.py  enum.py  events.py  fmt_py.py  io.py  logging.py  notifications.py  path_util.py  prim_natural.py  prim_types.py  proc_util.py  process.py  termcap.py  tools.py  typing.py  version.py
python/dazl_internal/: __init__.py  background_http_server.py
python/docker/: Dockerfile
python/docs/: conf.py  dazl.cli.rst  dazl.client.rst  dazl.damlast.rst  dazl.ledger.rst  dazl.model.rst  dazl.pretty.rst  dazl.protocols.rst  dazl.rst  dazl.util.rst  glossary.rst  index.rst  migrating.rst  testing.rst  tutorials.rst  tutorials_message_ingester.rst  tutorials_post_office.rst  tutorials_workflow_state.rst
python/scripts/: docs.py  generate.py  licenses.py  publish.sh
python/tests/: __init__.py  conftest.py
samples/ping-pong/: Makefile  README.md  app.py  daml.yaml  pyproject.toml  run.sh  setup.py
(+2266 files in other folders)
