# Copyright (c) 2017-2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "dazl"
version = "7.5.6"
description = "high-level Ledger API client for DAML ledgers"
license = "Apache-2.0"
authors = ["Davin K. Tanabe <davin.tanabe@digitalasset.com>"]
readme = 'README.md'
repository = "https://github.com/digital-asset/dazl-client"
homepage = "https://github.com/digital-asset/dazl-client"
keywords = ["daml", "blockchain", "dlt", "distributed ledger", "digital asset"]
packages = [{ include = "dazl", from = "python" }]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = { version = "*", optional = true }
dataclasses = { version = "*", python = "~=3.6.0" }
google-auth = { version = "*", optional = true }
googleapis_common_protos = "^1"
grpcio = ">=1.32.0"
oauthlib = { version = "*", optional = true }
prometheus_client = { version = "*", optional = true }
protobuf = ">=3.12.0"
pygments = { version = "*", optional = true }
requests = "*"
semver = "*"
toposort = "*"
typing_extensions = { version = "*", python = "<3.8.0" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flask = "^1.0"
grpc-stubs = "*"
grpcio-tools = ">=1.32.0"
isort = "^5"
mypy = "*"
pympler = "*"
pytest = "^6"
pytest-asyncio = "*"
sphinx = "^4"
sphinx-autobuild = "*"
sphinx-markdown-builder = "^0.5.4"
sphinxcontrib-trio = "^1.1.2"
types-protobuf = "*"
watchdog = "*"

[tool.poetry.extras]
oauth = ["google-auth", "oauthlib"]
prometheus = ["prometheus_client"]
pygments = ["pygments"]
server = ["aiohttp"]

[tool.poetry.scripts]
dazl = 'dazl.cli:main'

[tool.black]
line-length = 100

[tool.isort]
combine_as_imports = true
combine_star = true
force_sort_within_sections = true
group_by_package = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
log_cli = true
log_cli_level = "DEBUG"
junit_family = "xunit1"
testpaths = ["python/tests/unit"]
