# Copyright (c) 2017-2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "dazl"
version = "8.0.0b2"
description = "high-level Ledger API client for Daml ledgers"
license = "Apache-2.0"
authors = ["Davin K. Tanabe <davin.tanabe@digitalasset.com>"]
readme = 'README.md'
repository = "https://github.com/digital-asset/dazl-client"
homepage = "https://github.com/digital-asset/dazl-client"
keywords = ["daml", "blockchain", "dlt", "distributed ledger", "digital asset"]
packages = [{ include = "dazl", from = "python" }, { include = "_dazl", from = "python" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = { version = "*", optional = true }
google-auth = { version = "*", optional = true }
googleapis_common_protos = "^1"
grpcio = ">=1.50.0"
oauthlib = { version = "*", optional = true }
prometheus_client = { version = "*", optional = true }
protobuf = ">=4"
pygments = { version = "*", optional = true }
pyOpenSSL = { version = "*", optional = true }
requests = "*"
semver = "*"
toposort = "*"
typing_extensions = { version = "*" }

[tool.poetry.extras]
oauth = ["google-auth", "oauthlib"]
prometheus = ["prometheus_client"]
pygments = ["pygments"]
server = ["aiohttp"]
tls-testing = ["pyOpenSSL"]

[tool.poetry.scripts]
dazl = 'dazl.cli:main'

[tool.poetry.group.dev.dependencies]
black = "*"
cryptography = "*"
grpc-stubs = "*"
grpcio-tools = ">=1.50.0"
isort = "^5"
jinja2 = "^3"
mypy = "*"
pyjwt = "*"
pytest = "*"
pytest-asyncio = "*"
rich = "^13.7.0"
setuptools = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-markdown-builder = "*"
types-protobuf = "*"
types-pyOpenSSL = "*"
types-requests = "*"
types-setuptools = "*"
watchdog = "*"

[tool.black]
line-length = 100

[tool.isort]
add_imports = ["from __future__ import annotations"]
combine_as_imports = true
combine_star = true
force_sort_within_sections = true
group_by_package = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3

[tool.mypy]
cache_dir = '.cache/mypy'
namespace_packages = true

[[tool.mypy.overrides]]
module = ['google._upb.*', 'google.auth.transport.*', 'google.oauth2.credentials.*', 'google.protobuf.pyext.*', 'google.rpc.*', 'google.rpc.status_pb2.*', 'grpc._cython.*', 'grpc.aio.*', 'grpc_tools.*', 'prometheus_client.*', 'psutil.*', 'pygments.*', 'semver.*', 'toposort.*']
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
log_cli = true
log_cli_level = "DEBUG"
junit_family = "xunit1"
testpaths = ["python/tests/structure", "python/tests/unit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
