# Copyright (c) 2017-2020 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "dazl"
version = "7.2.0"
description = "high-level Ledger API client for DAML ledgers"
license = "Apache-2.0"
authors = ["Davin K. Tanabe <davin.tanabe@digitalasset.com>"]
readme = 'README.md'
repository = "https://github.com/digital-asset/dazl-client"
homepage = "https://github.com/digital-asset/dazl-client"
keywords = ["daml", "blockchain", "dlt", "distributed ledger", "digital asset"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = { version = "*", optional = true }
dataclasses = { version = "*", python = "~=3.6.0" }
google-auth = { version = "*", optional = true }
grpcio = ">=1.29.1"
oauthlib = { version = "*", optional = true }
prometheus_client = { version = "*", optional = true }
protobuf = ">=3.12.0"
pygments = { version = "*", optional = true }
requests = "*"
semver = "*"
toposort = "*"
typing_extensions = { version = "*", python = "<3.8.0" }

[tool.poetry.dev-dependencies]
flask = "^1.0"
grpcio-tools = ">=1.29.1"
isort = "^5.3.0"
mypy = "*"
pympler = "*"
pytest = "^5"
pytest-asyncio = "*"
pytest-subtests = "^0.2.1"
setuptools = "==40.8.0"
sphinx = "*"
sphinx-markdown-builder = "^0.5.1"
watchdog = "*"
yapf = "*"

[tool.poetry.extras]
oauth = ["google-auth", "oauthlib"]
prometheus = ["prometheus_client"]
pygments = ["pygments"]
server = ["aiohttp"]

[tool.poetry.scripts]
dazl = 'dazl.cli:main'
