[tool.poetry]
name = "daml-lf-decoder-gen"
version = "0.1.0"
description = ""
authors = ["Davin K. Tanabe <davin.tanabe@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio-tools = "^1.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
