[tool.poetry]
name = "ping-pong"
version = "0.1.0"
description = ""
authors = ["Luciano Joublanc (DA) <luciano.joublanc@digital-asset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dazl = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
